--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,20 @@
 }
 .navbar{
   background-color: #fff !important;
+
 }
 .navbar-brand{
   font-size:1.9rem !important;
   color:#565387 !important;
+
+}
+.navbar-brand img{
+  /* font-size:1.9rem !important;
+  color:#565387 !important;  */
+   height: 80px;
+  width: 50%;
+
+
 
 }
 
@@ -19,10 +29,10 @@
 }
 .menu_active{
   font-weight: bold;
-  border-bottom: 1px solid #565387;
+  border-bottom: 1px solid #6c4791;
 }
 .navbar a:hover{
-  color: #3498db !important;
+  color: #1d98cb !important;
 }
 @media (max-width:991px){
   .navbar-brand{
@@ -32,4 +42,97 @@
     font-weight: bold;
     border-bottom: none;
   }
+}
+
+/* #1d98cb
+#6c4791 */
+#header{
+  width: 100%;
+  height: 80vh;
+  margin-top:70px;
+}
+#header h1{
+  margin:0 0 10px 0;
+  font-size: 48px;
+  font-weight: 700;
+  color: black;
+}
+#header .brand-name{
+  color:#1d98cb;
+}
+#header h2{
+  color:#6c4791;
+  font-size: 24px;
+}
+
+#header .btn-get-started{
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 50px;
+  transition: 0.5s;
+  color:#6c4791;
+  border: 2px solid #6c4791;
+  text-decoration: none;
+ 
+}
+.card img{
+  align-items: center;
+  height:200px;
+  width:60%;
+  padding-left: 40%;
+} 
+#header .btn-get-started:hover {
+  background:#6c4791;
+  transition: all ease 0.3s;
+  color: white;
+}
+ .header-img{
+  text-align:left;
+  
+
+} 
+
+#header .animated {
+  animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+
+@-webkit-keyframes up-down{
+  0%{
+    transform: translateY(10px);
+  }
+  100%{
+    transform: translateY(-10px)
+  }
+}
+@keyframes up-down{
+  0%{
+    transform: translateY(10px);
+  }
+  100%{
+    transform: translateY(-10px)
+  }
+}
+
+#header .my-3{
+  color: #6c4791;
+  font-size: 1.3rem;
+  font-family: 'Montserrat';
+}
+
+.card-body .card-title{
+  color:#6c4791;
+  font-weight: bold;
+}
+.Footer{
+  /* position: fixed; */
+  margin-top: 10%;
+  left: 0;
+  bottom: auto;
+  width: 100%;
+  background-color:#7c7a7e;
+  color: white;
+  text-align: center;
 }
